# fastseg

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/fastseg/: curb_detection.h  fastseg.h  ground_plane_fitting.h  point_cloud.h
launch/: fastseg.launch
rviz/: fastseg.rviz
src/: curb_detection.cpp  fastseg.cpp  fastseg_ros.cpp  ground_plane_fitting.cpp
