<?xml version="1.0"?>
<package format="2">
  <name>fastseg</name>
  <version>0.0.0</version>
  <description>The fast_seg package</description>

  <maintainer email="shrijitsingh99@gmail.com">shrijitsingh99</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
